test/functional/failtests/classes/doubleDefineAttribute.txt
SyntaxError: Cannot declare attribute "x" multiple times
1 | object Foo<x, y, x> {
  |                  ^ (1:18)
2 | }

